--- a/homeSite.css
+++ b/homeSite.css
@@ -3,7 +3,7 @@
         border-top: 0.5px solid #999999;
         display: flex;
         justify-content: center;
-        margin:0 30px;
+        margin:30px 30px 0 30px;
     }
     .footer-bottom a {
       color: #999999;
