--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,18 +1,42 @@
-
-    .footer-bottom{
-        border-top: 0.5px solid #999999;
-        display: flex;
-        justify-content: center;
-        margin:30px 30px 0 30px;
-    }
-    .footer-bottom a {
-      color: #999999;
-      margin: 15px 0;
-      padding:0 30px;
-    
-    }
-    .footer-bottom a:first-child {
-      
-        border-right: 0.5px solid #999999;
-      
+body {
+  margin: 0;
+}
+.home {
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  .tabPart {
+    position: absolute;
+    display: flex;
+    .tab {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+      cursor: pointer;
+      color: unset;
+      text-decoration: none;
+      h5 {
+        margin: 0 0 10px 0;
       }
+    }
+    .tab:hover {
+      color: #409eff;
+      filter: invert(56%) sepia(89%) saturate(2516%) hue-rotate(189deg) brightness(101%) contrast(102%);
+    }
+  }
+  footer {
+    position: absolute;
+    bottom: 10px;
+    a {
+      color: #bbb;
+      font-size: 10px;
+      text-decoration: none;
+      width: 160px;
+    }
+    a:hover {
+      color: #409eff;
+    }
+  }
+}
