--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -45,4 +45,12 @@
   display: none !important;
 }
 
+mjx-container {
+  display: inline-block;
+  margin: auto 2px -2px;
+}
 
+mjx-container > svg {
+  margin: auto;
+  display: inline-block;
+}
